<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/gLogin"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="120dp"
        android:layout_gravity="center"
        android:src="@drawable/miki"
        android:contentDescription="@string/todo" />
    <TextView
        android:id="@+id/judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_gravity="center"
        android:text="@string/welcome_to_miki_app"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="tahoma"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="#EE9322"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="text"
        android:hint="Usernmae"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="353dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:ems="10"
        android:inputType="textPassword"
        android:hint="password"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="#EE9322"
        android:text="@string/button" />

    <TextView
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/don_t_have_an_account_register_here"
        android:textColor="@color/black"
        android:textSize="10sp"
        tools:ignore="SmallSp" />

</LinearLayout>